--- a/resume.tex
+++ b/resume.tex
@@ -6,8 +6,8 @@
 \name{Rutvik Joshi} % Your name
 % You can merge both of these into a single line, if you do not have a website.
 \address{ Halifax, CA} 
-\address{\href{mailto:rutvikj77@outlook.com}{Rutvikj77@outlook.com} \\ \href{https://linkedin.com/in/rutvikjoshi}{linkedin.com/in/RutvikJoshi} \\
-\href{https://github.com/RutvikJ77}{github.com/RutvikJ77}}
+\address{{\href{mailto:rutvikjoshi.tech@gmail.com}{RutvikJoshi.tech@gmail.com} \\ \href{https://linkedin.com/in/rutvikjoshi}{linkedin.com/in/RutvikJoshi} \\
+\href{https://github.com/RutvikJ77}{github.com/RutvikJ77}} \\ \href{https://rutvikjoshi.me}{rutvikjoshi.me}}
 
 \begin{document}
 %----------------------------------------------------------------------------------------
@@ -49,7 +49,7 @@
 % \end{rSection}
 
 \begin{rSection}{SKILLS} 
-Business Analysis, Process Development, Strategic Planning, Data Analysis, Communication, Problem-solving, SQL, Relational Databases, Project Management Tools(Jira, Confluence), and Tableau.
+Business Analysis, Process Development, Strategic Planning, Data Analysis, Communication, Problem-solving, SQL, Relational Databases, Project Management Tools(Jira, Confluence), Tableau, Python, DeepLearning, Blockchain
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -58,59 +58,46 @@ Business Analysis, Process Development, Strategic Planning, Data Analysis, Commu
 
 \begin{rSection}{EXPERIENCE}
 
-% \textbf{Junior Data Analyst intern} \hfill May 2023 - August 2023\\
-% Rimot.io \hfill \textit{Halifax, Remote}
-%  \begin{itemize}
-%     \itemsep -3pt {} 
-%     \item Analyzed CANEdge IOT vessel data and apply strong mathematical skills to prepare, analyze and present data Innate ability to recognize patterns and validate hypotheses
-%     \item Built visually appealing dashboards using Graphana & OpenSearch Dashboards effectively quantifying and bringing a change of 20% in data observation and frequency of the ingestion pipeline.
-%  \end{itemize}
-
-
-
-\textbf{Ecosystem Marketing Manager} \hfill April 2022 - February 2023\\
-Polygon Labs \hfill \textit{California, Remote}
+\textbf{IT Developer} \hfill September 2023 - Ongoing\\
+Canada Revenue Agency \hfill \textit{Canada, Remote}
  \begin{itemize}
     \itemsep -3pt {} 
-    \item Advising and consulting 450+ Web3 projects with GTM strategies including the frameworks, and processes for the long-term sustenance of the projects. Managing cross-functional global social engagement teams, both internally, and externally while delivering presentations and reports to senior executives/stakeholders.
-    % \item gathering 500K+ Impressions over a single social platform and increasing engagement by 14\% over the week.
-    % \item Managing cross-functional global social engagement teams, both internally, and externally with 20+ project teams on a daily basis, across all areas while creating and delivering high-quality presentations and reports to senior executives/stakeholders and business managers.
-    % \item Translating complex business questions and operations into solutions, covering in-depth functional expertise for smooth functioning.
+    \item Analyzed business requirements for 12+ internal applications, coordinating with 14 team leads to document effort estimates. Developed new estimation templates, improving change estimation calculation.
+    \item Optimized release scheduling and workload distribution view by developing 3 Jira dashboards using JQL, enhancing team efficiency. Conducted 50+ change management assessments with an average resolution of 3 days.
+    \item Managed and monitored 65+ conversations for the Project Office of T3 tax file system, ensuring active resolution to inquiries and issues. Revising and suggesting impactful approaches to the supervisor for following up with 16 team leads and 6 cross-functional managers. 
+    \item Created 20+ Jira filters and 4 dashboards, saving the team 100 minutes daily and improving the visibility of urgent items. Automated critical reports in Excel for the sectional director, reducing report generation time by 40\% and enhancing data accuracy.
+ \end{itemize}
 
+% \textbf{IT Analyst (Co-op)} \hfill September 2023 - December 2023\\
+% Canada Revenue Agency \hfill \textit{Canada, Remote}
+%  \begin{itemize}
+%     \itemsep -3pt {} 
+%     \item Managed and monitored 65+ folders of the Project Office mailbox for T3 Modernization, ensuring active resolution to inquiries and issues. Revising and suggesting impactful approaches to the team lead for following up with 16 team leads and 6 cross-functional managers. 
+%     \item Created 20+ Jira filters and 4 dashboards, saving the team 100 minutes daily and improving visibility of urgent items. Automated critical reports in Excel, reducing report generation time by 40\% and enhancing data accuracy.
+
+
+%  \end{itemize}
+
+\textbf{Vessel Data Analyst} \hfill May 2023 - August 2023\\
+Rimot.io(BlueGrid) \hfill \textit{Canada, Halifax}
+ \begin{itemize}
+    \itemsep -3pt {} 
+    \item Analyzed energy consumption patterns of 3 lobster fishing vessels, achieving 94\% correlation between cumulative energy and time, by processing and visualizing real-time data from CANEdge devices.
+    \item Developed Grafana dashboards to evaluate vessel trips, resulting in the identification of data anomalies and discrepancies, through querying AWS Timestream using TSQL and creating visualizations for KPIs. Presented data-driven recommendations to management, influencing strategic decisions on fleet modernization.
+    \item Optimized power-speed relationship analysis, achieving improved R2 values, by implementing various curve fitting methods including linear, cubic, and sigmoid fits. Conducted hypothesis testing in Python, achieving an 89\% success rate in predicting vessel electrification.
  \end{itemize}
 
 
-\textbf{Marketing Analyst} \hfill July 2021 - April 2022\\
-Polygon Labs \hfill \textit{Bangalore, Remote}
+\textbf{Ecosystem Marketing Manager \& Analyst} \hfill October 2021 - February 2023\\
+Polygon Labs \hfill \textit{USA, Remote}
  \begin{itemize}
     \itemsep -3pt {} 
-    \item Produced comprehensive market research reports and utilized a data-first approach to monitor social media analytics. Achieved a remarkable 270\% acceleration in social media engagement across multiple channels through in-depth statistical analysis. Identified and harnessed 4 key performance indicators (KPIs) to strengthen the company's narrative and positioning within Blockchain communities.
-    \item Delivered impactful insights to the CMO, driving a substantial shift in the marketing strategy, and developed an internal WebApp utilizing Python to monitor user insights for campaign design.
- \end{itemize}
+    \item Advising and consulting 45+ Blockchain Web3 projects with GTM strategies including the frameworks, and processes for the long-term sustenance of the projects. Partnering with 6 cross-functional global social engagement teams, and delivering high-impact presentations to senior executives.
+    \item Synthesised multiple endpoints from internal and community-based narratives to script the monthly developer and institutional newsletter bringing 5K+ and 900 readers with 23\% open rates over a month.
+    \item Developed a Python web application for user insights and analyzed DeFi projects using SQL, driving a 35\% improvement in campaign effectiveness.
+    \item Generated data-driven market research reports, leading to a 270\% increase in social media engagement across multiple channels. Reported the insights to the CMO raising a propelling shift to the marketing strategy.
 
-\textbf{Community Data Analyst} \hfill January 2021 - July 2021\\
-BlueLearn(prev. Clinify) \hfill \textit{Community(Volunteering)}
- \begin{itemize}
-    \itemsep -3pt {} 
-    \item Drove the Engagement team with efficiency, delivering data-driven insights to moderators. Conducted statistical community analysis and identified 5 pivotal metrics, enhancing the experience for over 27,000 members.
-    % \item Spearheaded the formulation of 10 key sectors for community expansion, fostering substantial growth.
-    % \item Championed improved onboarding processes by leveraging UX methodologies, resulting in a remarkable 20\% increase in user retention. Introduced impactful idea implementation strategies through visual reports and dashboards, enabling seamless execution and driving successful outcomes.
  \end{itemize}
- 
-%  \textbf{Data Science and Business Analyst intern} \hfill March 2021 - April 2021\\
-% The Sparks Foundation \hfill \textit{Singapore}
-%  \begin{itemize}
-%     \itemsep -3pt {} 
-%      \item Analyzed sports data to determine \textbf{\textgreater84\%} well-performing teams and help businesses collaborate with them in order for a marketing deal. 
-%      \item Implemented KMeans clustering algorithm to determine the underperforming groups present in the dataset.
-%  \end{itemize}
-% \textbf{Software Developer} \hfill Aug 2019 - Aug 2020\\
-% Incerno Technologies Pvt. Ltd. \hfill \textit{Mumbai, IN}
-%  \begin{itemize}
-%     \itemsep -3pt {} 
-%      \item Examined the planned drone system for the agricultural use case and assessed the required parts involved in drone building with main focus in areas of Computer Vision.
-%     \item Developed automation scripts which handle the Deep learning preprocessing stage required for computer vision using python.
-%  \end{itemize}
 
 \end{rSection} 
 
@@ -123,16 +110,26 @@ BlueLearn(prev. Clinify) \hfill \textit{Community(Volunteering)}
 
 \href{https://github.com/RutvikJ77/Resume-aid}{\textbf{\underline{Resume-Aid}}} $|$\textit{ Python, Streamlit, Spacy}
 \begin{itemize}
-    \item Achieved accurate resume analysis and insightful scoring by developing a web application in Python, leveraging Spacy for enhanced accuracy and relevance on candidate evaluation.
-    % \item  {Analyzed Resumes to provide accurate insights and scores using RAKE and cosine similarity for particular words which co-relate with the presented job description.}
-    % \item{Gather a list of \textbf{top 10} phrases and words from resume and generate top 20 importance and similarity list to calculate the final score and display it through a web application.}
+    \item Simplified ATS compatibility checks by developing a resume evaluation tool using SpaCy, Scikit-learn, and cosine similarity, enabling users to optimize resumes for job descriptions.
+    \item Processed resumes with doc2text and Rake NLTK to extract and score key phrases, improving applicant visibility in recruitment pipelines by up to 30\%.
+    % \item  {Analyzed Resumes to provide accurate insights and scores using RAKE and cosine similarity for particular words that co-relate with the presented job description.}
+    % \item{Gather a list of \textbf{top 10} phrases and words from your resume and generate a top 20 importance and similarity list to calculate the final score and display it through a web application.}
 \end{itemize}
 
-% \href{https://github.com/RutvikJ77/ExAncient}{\textbf{\underline{ExAncient}}} $|$\textit{ Python, Flask, Tensorflow, SciKit-Learn}
-% \begin{itemize}
-%     \item  {Imparted an experience of ancient style paintings with modern user input photographs using \textbf{Image Style Transfer} deep learning technique.}
-%     \item {Generate a romantic story based on the Photograph using \textbf{Convolutional Neural Network} and a caption model generator with \textbf{95\% accuracy}.}
-% \end{itemize}
+\break
+
+\href{https://github.com/RutvikJ77/ExAncient}{\textbf{\underline{ExAncient}}} $|$\textit{ Python, Flask, Tensorflow, SciKit-Learn}
+\begin{itemize}
+    \item {Imparted an experience of ancient style paintings with modern user input photographs using \textbf{Image Style Transfer} deep learning technique.}
+    \item {Generate a romantic story based on the Photograph using \textbf{Convolutional Neural Network} and a caption model generator with \textbf{95\% accuracy}.}
+\end{itemize}
+
+\href{https://github.com/RutvikJ77/FoodNCulture}{\textbf{\underline{FoodNCulture}}} $|$\textit{ Java, Android, Figma, SOLID}
+\begin{itemize}
+  \item Conceptualized and implemented a community-driven web platform using Java and MySQL, fostering cultural exchange by connecting hosts and guests through food-sharing events.
+  \item Designed a robust backend architecture with modules for user authentication, payments, event management, and chat, ensuring seamless and secure user interactions.
+  \item Enhanced user engagement through an interactive community forum and donation system, promoting inclusivity and sustainability within immigrant and student communities.
+\end{itemize}
 
 % \href{https://github.com/RutvikJ77/Smart-queue-management}{\textbf{\underline{Smart Queue Management}}} $|$\textit{ Jupyter Notebook, Intel OpenVino toolkit, Tensorflow}
 % \begin{itemize}
@@ -142,19 +139,29 @@ BlueLearn(prev. Clinify) \hfill \textit{Community(Volunteering)}
 
 % \href{https://github.com/RutvikJ77/RetStock}{\textbf{\underline{RetStock}}} $|$\textit{ Python, Streamlit, Matplotlib}
 % \begin{itemize}
-%     \item  {Extracted social media influenced stocks and interpreted their impact on the closing prices over time using \textbf{Natural Language Processing} techniques.}
-%     \item {Plotted a simulated graph of sentiments using matplotlib with \textbf{92\% positive} responses on social stock. Deployed the web view using Streamlit.}
+% \item Developed a data visualization platform using Streamlit, Yahoo Finance API, and Tweepy to analyze stock trends influenced by social media sentiment.
+% \item Integrated Natural Language Toolkit (NLTK) for sentiment analysis of Twitter data, correlating tweet volume and sentiment with stock price movements over time.
+% \item Enabled informed decision-making for retail investors by graphically overlaying real-time tweet metrics and financial market data, enhancing trend insights.
 % \end{itemize}
+
+\href{https://github.com/RutvikJ77/Inspiquote}{\textbf{\underline{Inspiquote}}} $|$\textit{Python, REST API}
+\begin{itemize}
+  \item Created a daily motivational Twitter bot using Tweepy, Unsplash API, and Pillow, combining quotes with curated images, resulting in an engaging visual experience for users.
+  \item Automated content generation with Rapid Automatic Keyword Extraction (Rake-NLTK) and schedule posts via APScheduler, enhancing user interaction through timely motivational tweets and replies.
+  \item Deployed on Heroku, ensuring scalable operations and consistent engagement with users, including personalized direct messages and retweets every 8 hours.
+\end{itemize}
 
 \href{https://github.com/RutvikJ77/Case-Predictor}{\textbf{\underline{Case-Predictor}}} $|$\textit{ Python, Jupyter Notebook, Streamlit, SciKit-Learn}
 \begin{itemize}
-    \item  Performed exploratory data analysis and implemented the Random Forest Algorithm to determine vaccination co-relation with the reduction of infection cases. Deployed a prediction model using Streamlit.
+  \item Engineered a machine learning library (infect_predict) leveraging ensemble models like LSTM, GRU, CNN, and meta-features to enhance prediction accuracy, achieving a Mean Squared Error (MSE) of 3575.
+  \item Designed and deployed Case Predictor, an interactive Streamlit app powered by TensorFlow and Scikit-Learn, enabling real-time infection rate predictions.
+  \item Applied advanced feature engineering and 3-fold cross-validation to optimize data preprocessing and modeling pipelines, improving convergence and reducing error rates.
 \end{itemize}
 
-% \href{https://public.tableau.com/app/profile/rutvik.j/viz/ImportExportAnalysis/ImportExportAnalysis}{\textbf{\underline{Indian Import-Export Analysis}}} $|$\textit{ Python, Tableau, MS-Excel}
+% \href{https://public.tableau.com/app/profile/rutvik.j/viz/ImportExportAnalysis/ImportExportAnalysis}{\textbf{\underline{Population of world on Internet}}} $|$\textit{ Python, Tableau, MS-Excel}
 % \begin{itemize}
-%     \item Developed a comprehensive Tableau visualization to analyze import and export commodity data, facilitating quick identification of trends and growth opportunities for stakeholders.
-% \end{itemize}
+%     \item Developed a comprehensive Tableau visualization to analyze import and export commodity data for India pre-pandemic, allowing stakeholders to quickly identify trends and opportunities for growth.
+%     \item {Conducted data analysis on trade data from various sources, including government agencies and industry associations using Python, to ensure accuracy and relevance of the Tableau visualization for the stakeholders.}
 
 \end{rSection} 
 
@@ -178,9 +185,9 @@ BlueLearn(prev. Clinify) \hfill \textit{Community(Volunteering)}
 
 %----------------------------------------------------------------------------------------
 % \begin{rSection}{Certifications \& Specializations} 
-% %  \textbf{Deep Learning}(Deeplearning.ai), \textbf{Intel Edge AI developer Nanodegree}(Udacity), 
-% \textbf{Google Data Analytics}(Coursera), \textbf{Blockchain Specialization}(Coursera),
-% \textbf{Business Intelligence and Data Analytics}(Coursera)
+% Deep Learning(Deeplearning.ai), Intel Edge AI developer Nanodegree(Udacity), 
+% Google Data Analytics(Coursera), Blockchain Specialization(Coursera),
+% Business Intelligence and Data Analytics(Coursera)
 % \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -188,10 +195,13 @@ BlueLearn(prev. Clinify) \hfill \textit{Community(Volunteering)}
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Achievements and Extra-Curricular Activities} 
 \begin{itemize}
-    % \item \textbf{Awarded Best Beginner Hack} and \textbf{Best International Team} at Kent Hack Enough Hackathon 2020.
-    \item Won \textbf{Best Data Science} project at TheGoldenHack 2021 and overall \textbf{First} from 130+ projects at MLH DataDayGrind 2.0. \textbf{Winner} at Saint Mary's University(Halifax) Innovation Sprint for \textbf{developing unique solution} to the challenges faced by local businesses.
-    % \item Ranked in \textbf{Top 20\%} at \textbf{Qiskit Quantum India Challenge}.
-    \item Mentored at Canada's biggest hackathon \textbf{Hack The North} and at North Texas's largest Hackathon \textbf{HackUTD}VII Seas.
+    \item \textbf{Awarded Best Hack} and \textbf{Best International Team} at Kent Hack Enough Hackathon 2020.
+    \item Won the Saint Mary University's 1st Innovation Cup challenge among 17 teams. 
+    \item Awarded as the \textbf{best team lead} and winning team for York University's Business Analytics course with IBM.
+    \item Ranked in \textbf{Top 20\%} at \textbf{Qiskit Quantum India Challenge}.
+    \item Mentored at Canada's biggest hackathon \textbf{Hack The North} and at North Texas's largest Hackathon \textbf{HackUTD}VII Seas. Lead a team of 4 at 15+ international hackathons.
+    \item \textbf{Guest Speaker} at Atlantic Canada’s startup incubator Shiftkey labs for Introduction to Blockchain.
+    \item Won \textbf{Best Data Science} project at TheGoldenHack 2021 and overall \textbf{First} from 130+ projects at MLH DataDayGrind 2.0. 
     % \item Lead a team of 4 at more than 15+ international hackathons.
     % \item Selected from a pool of 10000+ applicants to learn about the upcoming AI change of Edge computing for \textbf{Intel Edge AI scholarship}.
     % \item Selected as \textbf{SkillShare Scholarship} recipient from a pool of candidates to learn about diverse courses available from distinct instructors.
