--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,4 @@
+
 \documentclass{resume} % Use the custom resume.cls style
 
 \usepackage[left=0.4 in,top=0.4in,right=0.4 in,bottom=0.4in]{geometry} % Document margins
@@ -93,7 +94,7 @@ Polygon Labs \hfill \textit{USA, Remote}
  \begin{itemize}
     \itemsep -3pt {} 
     \item Advising and consulting 45+ Blockchain Web3 projects with GTM strategies including the frameworks, and processes for the long-term sustenance of the projects. Partnering with 6 cross-functional global social engagement teams, and delivering high-impact presentations to senior executives.
-    \item Synthesised multiple endpoints from internal and community-based narratives to script the monthly developer and institutional newsletter bringing 5K+ and 900 readers with 23\% open rates over a month.
+    \item Synthesised multiple endpoints from internal and community-based narratives to script the monthly developer and institutional newsletter, bringing 5K+ and 900 readers with 23\% open rates over a month.
     \item Developed a Python web application for user insights and analyzed DeFi projects using SQL, driving a 35\% improvement in campaign effectiveness.
     \item Generated data-driven market research reports, leading to a 270\% increase in social media engagement across multiple channels. Reported the insights to the CMO raising a propelling shift to the marketing strategy.
 
@@ -116,8 +117,6 @@ Polygon Labs \hfill \textit{USA, Remote}
     % \item{Gather a list of \textbf{top 10} phrases and words from your resume and generate a top 20 importance and similarity list to calculate the final score and display it through a web application.}
 \end{itemize}
 
-\break
-
 \href{https://github.com/RutvikJ77/ExAncient}{\textbf{\underline{ExAncient}}} $|$\textit{ Python, Flask, Tensorflow, SciKit-Learn}
 \begin{itemize}
     \item {Imparted an experience of ancient style paintings with modern user input photographs using \textbf{Image Style Transfer} deep learning technique.}
@@ -133,8 +132,8 @@ Polygon Labs \hfill \textit{USA, Remote}
 
 % \href{https://github.com/RutvikJ77/Smart-queue-management}{\textbf{\underline{Smart Queue Management}}} $|$\textit{ Jupyter Notebook, Intel OpenVino toolkit, Tensorflow}
 % \begin{itemize}
-%     \item  {Determines if a shop queue has reached its maximum number from input video footage using custom built person detection algorithm and OpenCV.}
-%     \item {Generates a warning in real time using Intel openvino edge computing toolkit if the queue exceeds the given maximum count.}
+%     \item  {Determines if a shop queue has reached its maximum number from input video footage using custom-built person detection algorithm and OpenCV.}
+%     \item {Generates a warning in real time using Intel openvino edge computing toolkit if the queue exceeds the maximum count.}
 % \end{itemize}
 
 % \href{https://github.com/RutvikJ77/RetStock}{\textbf{\underline{RetStock}}} $|$\textit{ Python, Streamlit, Matplotlib}
@@ -144,18 +143,19 @@ Polygon Labs \hfill \textit{USA, Remote}
 % \item Enabled informed decision-making for retail investors by graphically overlaying real-time tweet metrics and financial market data, enhancing trend insights.
 % \end{itemize}
 
-\href{https://github.com/RutvikJ77/Inspiquote}{\textbf{\underline{Inspiquote}}} $|$\textit{Python, REST API}
+\href{https://github.com/RutvikJ77/Inspiquote}{\textbf{\underline{Inspiquote}}} $|$\textit{Python, Rest API}
 \begin{itemize}
   \item Created a daily motivational Twitter bot using Tweepy, Unsplash API, and Pillow, combining quotes with curated images, resulting in an engaging visual experience for users.
-  \item Automated content generation with Rapid Automatic Keyword Extraction (Rake-NLTK) and schedule posts via APScheduler, enhancing user interaction through timely motivational tweets and replies.
-  \item Deployed on Heroku, ensuring scalable operations and consistent engagement with users, including personalized direct messages and retweets every 8 hours.
+  \item Automated content generation with Rapid Automatic Keyword Extraction (Rake-NLTK) and scheduled posts via APScheduler, enhancing user interaction through timely motivational tweets and replies.
+  \item Deployed on Heroku, ensuring scalable operations and consistent user engagement, including personalized direct messages and retweets every 8 hours.
 \end{itemize}
 
-\href{https://github.com/RutvikJ77/Case-Predictor}{\textbf{\underline{Case-Predictor}}} $|$\textit{ Python, Jupyter Notebook, Streamlit, SciKit-Learn}
+\href{https://github.com/RutvikJ77/Case-Predictor}
+{\textbf{\underline{Case-Predictor}}} $|$\textit{ Python, Jupyter Notebook, Streamlit, SciKit-Learn}
 \begin{itemize}
-  \item Engineered a machine learning library (infect_predict) leveraging ensemble models like LSTM, GRU, CNN, and meta-features to enhance prediction accuracy, achieving a Mean Squared Error (MSE) of 3575.
-  \item Designed and deployed Case Predictor, an interactive Streamlit app powered by TensorFlow and Scikit-Learn, enabling real-time infection rate predictions.
-  \item Applied advanced feature engineering and 3-fold cross-validation to optimize data preprocessing and modeling pipelines, improving convergence and reducing error rates.
+  \item Engineered a machine learning library(infectpredict) leveraging ensemble models like LSTM, GRU, CNN, and meta-features to enhance prediction accuracy, achieving a Mean Squared Error (MSE) of 3575.
+  \item {Designed and deployed Case Predictor, an interactive Streamlit app powered by TensorFlow and Scikit-Learn, enabling real-time infection rate predictions.}
+  \item {Applied advanced feature engineering and 3-fold cross-validation to optimize data preprocessing and modeling pipelines, improving convergence and reducing error rates.}
 \end{itemize}
 
 % \href{https://public.tableau.com/app/profile/rutvik.j/viz/ImportExportAnalysis/ImportExportAnalysis}{\textbf{\underline{Population of world on Internet}}} $|$\textit{ Python, Tableau, MS-Excel}
@@ -196,13 +196,12 @@ Polygon Labs \hfill \textit{USA, Remote}
 \begin{rSection}{Achievements and Extra-Curricular Activities} 
 \begin{itemize}
     \item \textbf{Awarded Best Hack} and \textbf{Best International Team} at Kent Hack Enough Hackathon 2020.
-    \item Won the Saint Mary University's 1st Innovation Cup challenge among 17 teams. 
-    \item Awarded as the \textbf{best team lead} and winning team for York University's Business Analytics course with IBM.
-    \item Ranked in \textbf{Top 20\%} at \textbf{Qiskit Quantum India Challenge}.
-    \item Mentored at Canada's biggest hackathon \textbf{Hack The North} and at North Texas's largest Hackathon \textbf{HackUTD}VII Seas. Lead a team of 4 at 15+ international hackathons.
-    \item \textbf{Guest Speaker} at Atlantic Canada’s startup incubator Shiftkey labs for Introduction to Blockchain.
+    \item Won the Saint Mary University's 1st Innovation Cup challenge among 17 teams. Awarded as the \textbf{best team lead} and winning team for York University's Business Analytics course with IBM.
+    % \item Ranked in \textbf{Top 20\%} at \textbf{Qiskit Quantum India Challenge}.
+    \item Mentored at Canada's biggest hackathon \textbf{Hack The North} and at North Texas's largest Hackathon \textbf{HackUTD}VII Seas. Led a team of 4 at 15+ international hackathons.
+    \item \textbf{Guest Speaker} at Atlantic Canada’s startup incubator Shiftkey Labs for Introduction to Blockchain.
     \item Won \textbf{Best Data Science} project at TheGoldenHack 2021 and overall \textbf{First} from 130+ projects at MLH DataDayGrind 2.0. 
-    % \item Lead a team of 4 at more than 15+ international hackathons.
+    % \item Led a team of 4 at over 15+ international hackathons.
     % \item Selected from a pool of 10000+ applicants to learn about the upcoming AI change of Edge computing for \textbf{Intel Edge AI scholarship}.
     % \item Selected as \textbf{SkillShare Scholarship} recipient from a pool of candidates to learn about diverse courses available from distinct instructors.
     % \item Collaborated and guided a group of \textbf{12 CyberSecurity} enthusiasts to visit Imedita in Pune.
