feat: Updated resume.tex

--- a/resume.tex
+++ b/resume.tex
@@ -119,8 +119,8 @@ Polygon Labs \hfill \textit{USA, Remote}
 
 \href{https://github.com/RutvikJ77/ExAncient}{\textbf{\underline{ExAncient}}} $|$\textit{ Python, Flask, Tensorflow, SciKit-Learn}
 \begin{itemize}
-    \item {Imparted an experience of ancient style paintings with modern user input photographs using \textbf{Image Style Transfer} deep learning technique.}
-    \item {Generate a romantic story based on the Photograph using \textbf{Convolutional Neural Network} and a caption model generator with \textbf{95\% accuracy}.}
+    \item {Imparted an experience of ancient style paintings with modern user input photographs using Image Style Transfer deep learning technique.}
+    \item {Generate a romantic story based on the Photograph using a Convolutional Neural Network and a caption model generator with 95\% accuracy.}
 \end{itemize}
 
 \href{https://github.com/RutvikJ77/FoodNCulture}{\textbf{\underline{FoodNCulture}}} $|$\textit{ Java, Android, Figma, SOLID}
