feat: updated resume.tex

--- a/resume.tex
+++ b/resume.tex
@@ -109,7 +109,7 @@ Polygon Labs \hfill \textit{USA, Remote}
 \begin{rSection}{PROJECTS}
 \vspace{0.05em}
 
-\href{https://github.com/RutvikJ77/Resume-aid}{\textbf{\underline{Resume-Aid}}} $|$\textit{ Python, Streamlit, Spacy}
+\href{https://github.com/RutvikJ77/Resume-aid}{\textbf{\underline{Resume-Aid}}} $|$\textit{ Python, Streamlit, Spacy, Numpy, Pandas}
 \begin{itemize}
     \item Simplified ATS compatibility checks by developing a resume evaluation tool using SpaCy, Scikit-learn, and cosine similarity, enabling users to optimize resumes for job descriptions.
     \item Processed resumes with doc2text and Rake NLTK to extract and score key phrases, improving applicant visibility in recruitment pipelines by up to 30\%.
@@ -143,7 +143,7 @@ Polygon Labs \hfill \textit{USA, Remote}
 % \item Enabled informed decision-making for retail investors by graphically overlaying real-time tweet metrics and financial market data, enhancing trend insights.
 % \end{itemize}
 
-\href{https://github.com/RutvikJ77/Inspiquote}{\textbf{\underline{Inspiquote}}} $|$\textit{Python, Rest API}
+\href{https://github.com/RutvikJ77/Inspiquote}{\textbf{\underline{Inspiquote}}} $|$\textit{Python, Rest API, Numpy, Pandas}
 \begin{itemize}
   \item Created a daily motivational Twitter bot using Tweepy, Unsplash API, and Pillow, combining quotes with curated images, resulting in an engaging visual experience for users.
   \item Automated content generation with Rapid Automatic Keyword Extraction (Rake-NLTK) and scheduled posts via APScheduler, enhancing user interaction through timely motivational tweets and replies.
@@ -151,7 +151,7 @@ Polygon Labs \hfill \textit{USA, Remote}
 \end{itemize}
 
 \href{https://github.com/RutvikJ77/Case-Predictor}
-{\textbf{\underline{Case-Predictor}}} $|$\textit{ Python, Jupyter Notebook, Streamlit, SciKit-Learn}
+{\textbf{\underline{Case-Predictor}}} $|$\textit{ Python, Jupyter Notebook, Streamlit, SciKit-Learn, matplotlib}
 \begin{itemize}
   \item Engineered a machine learning library(infectpredict) leveraging ensemble models like LSTM, GRU, CNN, and meta-features to enhance prediction accuracy, achieving a Mean Squared Error (MSE) of 3575.
   \item {Designed and deployed Case Predictor, an interactive Streamlit app powered by TensorFlow and Scikit-Learn, enabling real-time infection rate predictions.}
