--- a/resume.tex
+++ b/resume.tex
@@ -171,10 +171,10 @@ Polygon Labs \hfill \textit{USA, Remote}
 
 \begin{rSection}{Education}
 
-{\bf Master of Applied Computer Science \hfill {2022 - 2024}}\\
+{\bf Master of Applied Computer Science \hfill {}}\\
 \textit{Dalhousie University} \hfill{\textit{Halifax, CA}}
 
-{\bf Bachelor of Engineering in Computer Engineering \hfill {2018 - 2022}}\\
+{\bf Bachelor of Engineering in Computer Engineering \hfill {}}\\
 \textit{University of Mumbai(CGPA - 9.03/10)} \hfill{\textit{Mumbai, IN}}
 
 
